@@ -1,6 +1,7 @@
 2005-10-20
 <pablo@eurodev.net>
 	o Kill some more files that generated by the autocrap
+	o Resync with the lastest libnetfilter_conntrack API changes
 
 2005-10-16
 <pablo@netfilter.org>
